--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,22 @@
   <artifactId>uwlr-client-server</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <name>UWLR Client/Server library</name>
+  <name>UWLR Leerlinggegevens Client/Server library</name>
   <properties>
+    <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
     <cxf-codegen-plugin.version>3.3.5</cxf-codegen-plugin.version>
     <cxf-rt-bindings-soap.version>3.3.5</cxf-rt-bindings-soap.version>
+    <cxf-rt-frontend-jaxws.version>3.2.6</cxf-rt-frontend-jaxws.version>
     <cxf-rt-transports-http.version>3.2.7</cxf-rt-transports-http.version>
     <cxf-xjc-dv.version>3.3.0</cxf-xjc-dv.version>
+    <jaxb-api.version>2.3.1</jaxb-api.version>
     <jaxws-maven-plugin.version>2.6</jaxws-maven-plugin.version>
     <jaxws-ri.version>2.3.2</jaxws-ri.version>
     <jboss-servlet-api_4.0_spec.version>1.0.0.Final</jboss-servlet-api_4.0_spec.version>
+    <jcl-over-slf4j.version>1.7.26</jcl-over-slf4j.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <slf4j-log4j12.version>1.7.30</slf4j-log4j12.version>
     <spring-beans.version>5.1.12.RELEASE</spring-beans.version>
   </properties>
   <dependencies>
@@ -27,9 +33,14 @@
       <type>pom</type>
     </dependency>
     <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${jaxb-api.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-bindings-soap</artifactId>
-      <version>${cxf-rt-bindings-soap.version}</version>
+      <artifactId>cxf-rt-frontend-jaxws</artifactId>
+      <version>${cxf-rt-frontend-jaxws.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
@@ -42,15 +53,21 @@
       <version>${jboss-servlet-api_4.0_spec.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>${jcl-over-slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j-log4j12.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <version>${spring-beans.version}</version>
     </dependency>
   </dependencies>
-  <dependencyManagement>
-    <dependencies>
-    </dependencies>
-  </dependencyManagement>
   <build>
     <pluginManagement>
       <plugins>
@@ -64,6 +81,24 @@
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>${build-helper-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <configuration>
+                <sources>
+                  <source>${project.build.directory}/generated-sources/</source>
+                </sources>
+              </configuration>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+              <phase>generate-sources</phase>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
           <artifactId>jaxws-maven-plugin</artifactId>
           <version>${jaxws-maven-plugin.version}</version>
           <configuration>
@@ -74,21 +109,23 @@
             <execution>
               <configuration>
                 <bindingDirectory>
-                  ${basedir}/src/main/resources/nl/topicus/onderwijs/eck2/v2/bindings
+                  ${basedir}/src/main/resources/nl/topicus/onderwijs/uwlr/v2/bindings
                 </bindingDirectory>
                 <bindingFiles>
                   <bindingFile>UWLR_Leerlinggegevens_v2p2.xjb</bindingFile>
-                  <bindingFile>bindigns.xjb</bindingFile>
+                  <bindingFile>bindings.xjb</bindingFile>
                 </bindingFiles>
                 <extension>true</extension>
                 <keep>true</keep>
-                <sourceDestDir>${basedir}/target/generated-sources/webservice</sourceDestDir>
+                <packageName>nl.topicus.onderwijs.generated.uwlr.v2_2</packageName>
+                <sourceDestDir>${basedir}/target/generated-sources/</sourceDestDir>
                 <verbose>true</verbose>
                 <wsdlFiles>
                   <wsdlFile>
-                    ${basedir}/src/main/resources/nl/topicus/onderwijs/eck2/v2/wsdl/UWLR_Leerlinggegevens_v2p2.wsdl
+                    ${basedir}/src/main/resources/nl/topicus/onderwijs/uwlr/v2/wsdl/UWLR_Leerlinggegevens_v2p2.wsdl
                   </wsdlFile>
                 </wsdlFiles>
+                <xadditionalHeaders>true</xadditionalHeaders>
               </configuration>
               <goals>
                 <goal>wsimport</goal>
@@ -101,16 +138,20 @@
     </pluginManagement>
     <plugins>
       <plugin>
-        <groupId>org.apache.cxf</groupId>
-        <artifactId>cxf-codegen-plugin</artifactId>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jaxws-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
-  <description>Library voor het werken met Eck2, functionaliteit voor client en server</description>
+  <description>Library voor het werken met UWLR, functionaliteit voor client en server</description>
   <developers>
     <developer>
       <name>Tom Kirchjünger</name>
@@ -127,5 +168,5 @@
     <tag>HEAD</tag>
     <url>https://github.com/takirchjunger/eck2-client-server</url>
   </scm>
-  <url>http://www.topicus.nl/onderwijs</url>
+  <url>https://topicus.nl/platformen?sector=onderwijs</url>
 </project>
