--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.topicus.onderwijs</groupId>
   <artifactId>uwlr-client-server</artifactId>
@@ -154,6 +156,20 @@
       <timezone>1</timezone>
     </developer>
   </developers>
+  <distributionManagement>
+    <repository>
+      <name>Maven Repository Manager running on topicus.nl</name>
+      <id>topicus-repository</id>
+      <layout>default</layout>
+      <url>http://repo-onderwijs.topicus.local/artifactory/repo</url>
+    </repository>
+    <snapshotRepository>
+      <name>Maven Repository Manager running on topicus.nl</name>
+      <id>topicus-repository</id>
+      <layout>default</layout>
+      <url>http://repo-onderwijs.topicus.local/artifactory/repo</url>
+    </snapshotRepository>
+  </distributionManagement>
   <inceptionYear>2020</inceptionYear>
   <scm>
     <connection>scm:git:git@github.com:takirchjunger/uwlr-client-server.git</connection>
