[maven-release-plugin] prepare release uwlr-client-server-1.0-RC1

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.topicus.onderwijs</groupId>
   <artifactId>uwlr-client-server</artifactId>
-  <version>1.0-RC2-SNAPSHOT</version>
+  <version>1.0-RC1</version>
   <packaging>jar</packaging>
   <name>UWLR Leerlinggegevens Client/Server library</name>
   <properties>
@@ -173,7 +171,7 @@
   <inceptionYear>2020</inceptionYear>
   <scm>
     <connection>scm:git:git@github.com:takirchjunger/uwlr-client-server.git</connection>
-    <tag>HEAD</tag>
+    <tag>uwlr-client-server-1.0-RC1</tag>
     <url>https://github.com/takirchjunger/uwlr-client-server</url>
   </scm>
   <url>https://topicus.nl/platformen?sector=onderwijs</url>
