--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.topicus.onderwijs</groupId>
   <artifactId>uwlr-client-server</artifactId>
-  <version>1.0-RC1</version>
+  <version>1.0-RC1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>UWLR Leerlinggegevens Client/Server library</name>
   <properties>
