--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.topicus.onderwijs</groupId>
   <artifactId>uwlr-client-server</artifactId>
-  <version>1.0-RC2-SNAPSHOT</version>
+  <version>1.0-RC1</version>
   <packaging>jar</packaging>
   <name>UWLR Leerlinggegevens Client/Server library</name>
   <properties>
@@ -173,7 +173,7 @@
   <inceptionYear>2020</inceptionYear>
   <scm>
     <connection>scm:git:git@github.com:takirchjunger/uwlr-client-server.git</connection>
-    <tag>HEAD</tag>
+    <tag>uwlr-client-server-1.0-RC1</tag>
     <url>https://github.com/takirchjunger/uwlr-client-server</url>
   </scm>
   <url>https://topicus.nl/platformen?sector=onderwijs</url>
